wishlist-eliminator-app/src/components/wishlist/WishlistDisplay.scss
.WishlistCard {
    // 460 by 215 height
    width: inherit;
    position: relative;
    transition: height ease-in-out 0.6s;
    // height: calc(100vw * 460/215);
    height: 17em;

    background-color: rgb(24, 24, 143);
    color: white;
}

.WishlistCard-height {
    height: 35em;
}

.game-content {
    text-align: left;
    height: fit-content;

    .game-title {
        font-size: 1.5em;
        height: 2.5em;
        padding: 0 0.5em;
        display: flex;

        p {
            margin: auto 0;
        }
        a {
            color: inherit;
            text-decoration: none;
            transition: color 0.22s ease-in;
        }
        a:hover {
            color: rgb(214, 158, 118);
        }
    }

    .gameInformation {
        z-index: -1;
        padding: 1em;
        padding-bottom: 0;
    }
}

.list-render {
    width: 500px;

    .list-details {
        padding: 1em;
        height: 12em;
        
        h2 {
            margin: 0;
        }
    }
}

.game-header {
    display: flex;
    width: 100%;

    .game-header-image {
        // display: inline-block;
        width: 85%;
    
        img {
            width: 100%;
        }
    }
    
    .game-header-controls {
        display: flex;
        width: 15%;
        // height: 100%;
        flex-direction: column;
        justify-content: flex-start;
    
        .game-header-icons {
            padding: 22% 0;
            font-size: 32px;
            transition: color 0.25s ease-in-out;
        }

        .game-header-icons:hover {
            cursor: pointer;
            color: red;
        }

        .disabled-btn {
            cursor: not-allowed !important;
            color: grey !important;
        }
    }
}

